PLD-COMP-RENDU/pld-comp/tests/ifcc-test-output/testfiles-test-erreurs-6_return55withoutend/gcc-compile.txt
input.c: In function ‘main’:
input.c:2:13: error: expected ‘;’ before ‘}’ token
    2 |    return 55
      |             ^
      |             ;
    3 | }
      | ~            

return code: 1
